--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,14 @@
 V1.0.1 - Reverted the need for PvPLegends and renamed the extension to it's original name.
+----------------
 V1.0.2 - Emergency update to tackle some updated element name changes.
+----------------
 V1.0.3 - Consistent darker tone applied across the board, minor bug fixes and borders removed for a cleaner look.
-V1.0.3.5 - Changes which include V1.0.4's original changes, need to fix a few things before V1.0.4's release.
-V1.0.4 - 
+----------------
+V1.0.3.5
+Changes which include V1.0.4's original changes, need to fix a few things before V1.0.4's release.
+----------------
+V1.0.4
+----------------
 Theming of the "Recents" section.
 Fixed the footer near the bottom of the thread display options from being white.
 Optimizations across the board in terms of code execution.
@@ -10,3 +16,12 @@ Fixed a number of minor bugs which inverted the black colour upon being clicked,
 The removal of borders in certain sections.
 Fixed the buttons under Notable Members which appeared white.
 Implementation of the Blink rendering engine to decrease the overall load on the main GPU when loading the main body of the page.
+V1.0.4.5
+----------------
+Halloween update.
+Fixed an issue of the Interact button concerning colour co-ordination.
+Renamed the extension to "ADT" under it's short name.
+Introduced hovering events for certain objects.
+Made certain whites lighter in order to improve readability.
+Fixed the naming of this file in the repository.
+Improved the layout of recent releases for clarity in the repository.
