--- a/Changelog.txt
+++ b/Changelog.txt
@@ -95,4 +95,12 @@ Removed the darkening effect when scrolling on the navigation tabs.
 Other bug fixes which were reported have now been fixed.
 General code updates.
 ----------------
-Fixed 
+V1.0.5.6
+----------------
+The extension will now run in the background so that snow which is falling on the forums can be blocked from loading.
+Scrolling performance has been improved upon once all the resources have loaded.
+Added "background.js" to deny the Javascript script from loading.
+Updated the manifest file. 
+Removed unneeded code, tweaked transparency values for certain buttons.
+Minor bug fixes.
+----------------
