--- a/Changelog.txt
+++ b/Changelog.txt
@@ -108,3 +108,7 @@ Minor bug fixes.
 V1.0.5.7
 ----------------
 Added support for MCPrison, everything "should" be working correctly.
+----------------
+V1.0.5.8
+----------------
+Added support for CraftedWild.
