--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,83 +1,4 @@
-V1.0.1 - Reverted the need for PvPLegends and renamed the extension to it's original name.
-----------------
-V1.0.2 - Emergency update to tackle some updated element name changes.
-----------------
-V1.0.3 - Consistent darker tone applied across the board, minor bug fixes and borders removed for a cleaner look.
-----------------
-V1.0.3.5
-Changes which include V1.0.4's original changes, need to fix a few things before V1.0.4's release.
-----------------
-V1.0.4
-----------------
-Theming of the "Recents" section.
-Fixed the footer near the bottom of the thread display options from being white.
-Optimizations across the board in terms of code execution.
-Fixed a number of minor bugs which inverted the black colour upon being clicked, other minor bug fixes in terms of colour co-ordination.
-The removal of borders in certain sections.
-Fixed the buttons under Notable Members which appeared white.
-Taken advantage of the Blink rendering engine to decrease the overall load on the main GPU when loading the main body of the page.
-----------------
-V1.0.4.5
-----------------
-Halloween update.
-Fixed an issue of the Interact button concerning colour co-ordination.
-Renamed the extension to "ADT" under it's short name.
-Introduced hovering events for certain objects.
-Made certain whites lighter in order to improve readability.
-Fixed the naming of this file in the repository.
-Improved the layout of recent releases for clarity in the repository.
-----------------
-V1.0.4.6
-----------------
-Code has been compressed by 13%, reducing the overall file size of the extension and meaning that the resources can be loaded in much quicker than on the last release.
-Colours have been converted to the hexadecimal format for quicker execution than using RGB.
-Uploaded a screenshot to the Chrome Web Store.
-Fixed a minor text issue with the extension description.
-Updated version number.
-Improved the layout of the extension description on the Chrome Web Store.
-Minor bug fix with a colour on the forums.
-Bunch of other not-mentioned fixes.
-----------------
-V1.0.4.8
-----------------
-Removed the halloween themed background and replaced it with a fireworks-themed image.
-Minor bug fix.
-Version number updated.
-----------------
-V1.0.4.9
-----------------
-Removed duplicate elements.
-Fixed a minor colouring issue which was conflicting with transparent images.
-Currently working on changing the colour of the drop-down menu border colours, proving difficult however.
-Removed the bottom Twitter feed as it's not needed.
-Improved the colouring schemes for transparent and dark images.
-Big code compression update, 578 lines of code has been reduced to well under 200; expect resources to load in much faster than before.
-Lightened the text of the "Members" section for clarity; just by a little for delicacy.
-Updated version number.
-----------------
-V1.0.5
-----------------
-Issued an emergency update to address an element update.
-Reverted the manifest update due to it being in it's experimental state.
-----------------
-V1.0.5.1
-----------------
-Updated the extension to celebrate the holiday season.
-Minor text fixes on the Chrome store.
-----------------
-V1.0.5.2
-----------------
-Compatibility update to fix element name changes.
-Removed the christmas picture and replaced with a more subtle image.
-Minor text fixes on the "General" section.
-----------------
-V1.0.5.3
-----------------
-Fixed padding issues with text.
-Eliminated colour coding issues with the topic titles. (Darker would be appearing when it should have been #191919).
-Improved the colour schematics with the user titles.
-Lightened the text ever so slightly.
-Other bug fixes.
+Changes for version 1.0.1 - 1.0.5.3 can be found here: https://pastebin.com/cuuee2VS
 ----------------
 V1.0.5.5
 ----------------
