--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,44 +1,6 @@
 Changes for version 1.0.1 - 1.0.5.3 can be found here: https://pastebin.com/cuuee2VS
 ----------------
-V1.0.5.5 - Major
-----------------
-Updated to support the new layout of the main article timeline on Arkham.
-Updated to support "Profile postings" under a user's profile.
-Updated to support "Recent activity" under a user's profile.
-White borders have been removed on a user's profile.
-User banners have now been themed.
-Dark outlines have now been removed and are now the same as the main colouring of the body.
-Total revamp of the way colours are sectioned with each other.
-Removed other white borders in other sections.
-Fixed banners on Skyblocky not appearing black.
-An avatar background on a thread has now been changed to transparent.
-Removed the darkening effect when scrolling on the navigation tabs.
-Other bug fixes which were reported have now been fixed.
-General code updates.
-----------------
-V1.0.5.6 - Minor
-----------------
-The extension will now run in the background so that snow which is falling on the forums can be blocked from loading.
-Scrolling performance has been improved upon once all the resources have loaded.
-Added "background.js" to deny the Javascript script from loading.
-Updated the manifest file.
-Extension will now target Cloudflare's snowstorm Javascript file and prevent it from loading.
-Removed unneeded code, tweaked transparency values for certain buttons.
-Minor bug fixes.
-----------------
-V1.0.5.7 - Major
-----------------
-Added support for MCPrison, everything "should" be working correctly.
-----------------
-V1.0.5.8 - Beta
-----------------
-Added support for CraftedWild.
-----------------
-V1.0.5.9 - Beta
-----------------
-Navigation bar is now transparent on all forums.
-Increased contrast of certain text.
-Hover elements for dark sections has been removed.
+V1.0.5.5 - V1.0.5.9 can be viewed here: https://pastebin.com/mdvhsA8d
 ----------------
 v1.0.6 - Major
 ----------------
