--- a/Changelog.txt
+++ b/Changelog.txt
@@ -119,3 +119,50 @@ Removed support for Skyblocky.
 Added support for CandyCraft. (Beta phase)
 Firefox is now supported. 
 ----------------
+V1.0.8 - Big Changes
+----------------
+Complete overhaul of extension code.
+Background.js script has now been removed.
+Changed background image scaling factor, now compatible with all resolutions.
+Changed node icon backgrounds on Arkham; now seamless between CC and Arkham.
+Updated prior code, now compatible with the new design.
+Removed prior images.
+Changed image displayed on the background.
+Footer has now been hidden, no need for it.
+Reduced loading times between both forums. (CC is still quicker)
+Fixed colour mismatches.
+Avatars have now been corrected.
+Updated support for new forum roles, backgrounds have been darkened.
+Updated support for the new user design.
+Changed background colouring schemes across both forums.
+Changed some prior colour values to transparent.
+Included new code for compatibility with the updated design.
+Fixed up the manifest file.
+Removed some permissions which are no longer needed.
+Made new resources hidden, no injection to intercept - performance reasons.
+Darkened colours of buttons.
+Fixed menus not colouring correctly.
+Made most resources now use the hexadecimal value #131313, lighter on the eyes.
+Crunched background image size, should help with loading times.
+Changed image rendering schemes slightly.
+Updated some hover mechanics, now working.
+New BBCode editor now themed.
+Reduced BBCode transparency values before entries.
+Preparing code merger with Firefox.
+Introduced shadowing schemes for borders.
+Fixed up prior resolution issues.
+Cleaned up code for improved design of the Orange theme.
+Sub-forum code now fixed, no longer darker than the rest.
+Darkened search box for the new UIX theme.
+Borders for the entry of profile postings have now been introduced.
+Updated extension description and short descriptions.
+Extension is now no longer run in the background constantly.
+Removed webResources permission.
+Fixed background colour values when clicking on avatars.
+Miscellaneous non-mentioning fixes.
+Themed calender selection for the search box.
+Themed forum moderation tools.
+Cleaned up user profile colours.
+Changed navigation bar colour.
+Candycraft thread lists have been fixed.
+Fixed profile colour backgrounds on Candycraft.
