--- a/Changelog.txt
+++ b/Changelog.txt
@@ -69,3 +69,10 @@ Candycraft permissions updated, threads are now darkened.
 V1.0.8.2
 ----------------
 Fixed unread thread list not being darkened.
+----------------
+V1.0.8.3
+----------------
+Compressed background image further.
+Addon on Firefox and Chrome sizes reduced.
+Mobile on Firefox should now load with no issues.
+----------------
