--- a/Changelog.txt
+++ b/Changelog.txt
@@ -108,3 +108,8 @@ Implemented a test code update to darken notifications, hopefully works.
 Merged recent changes with Firefox, will be launched soon.
 Polished main Chrome page.
 -----------------
+V1.0.8.8
+-----------------
+Minor update to fix recent manifest description.
+Unified Firefox and Chrome numerical updates.
+-----------------
